objects/Workshop_Module__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Presentation_Time__c</fullName>
        <description>In minutes, the estimated length to introduce the material</description>
        <label>Presentation Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tutorial_Time__c</fullName>
        <description>In minutes, the length attendees should have to finish the tutorial</description>
        <label>Tutorial Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Workshop Module</label>
    <nameField>
        <label>Workshop Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workshop Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>